update 优化工作流的流程图提示信息